Fixed scrollbar issue

--- a/website_01/src/css/app.css
+++ b/website_01/src/css/app.css
@@ -10,7 +10,7 @@
 	left: 0;
 	top: 0;
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 }
